--- a/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="test.yuri.com.navigationdrawer">
+    package="co.kr.hufstory">
 
     <application
         android:allowBackup="true"
