--- a/NavigationDrawer/app/build.gradle
+++ b/NavigationDrawer/app/build.gradle
@@ -10,8 +10,8 @@ android {
         targetSdkVersion 23
 
         //2016.02.25, Jun Young Oh, versionCode & versionName upgrade
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -28,4 +28,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+
+    //2016.02.25, Aev Oh, Retrofit을 사용하기 위해 추가.
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
