--- a/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -17,4 +17,6 @@
         </activity>
     </application>
 
+    //2016.02.11, Aev Oh, Retrofit을 사용하기 위해 추가. 인터넷 사용 권한 설정.
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
