--- a/NavigationDrawer/app/build.gradle
+++ b/NavigationDrawer/app/build.gradle
@@ -9,9 +9,9 @@ android {
         minSdkVersion 19
         targetSdkVersion 23
 
-        //2016.02.25, Jun Young Oh, versionCode & versionName upgrade
-        versionCode 11
-        versionName "1.5.5"
+        //2016.02.25, Jun Young Oh, versionCode & versionName upgrade, versionCode 13
+        versionCode 13
+        versionName "1.5.7"
     }
     buildTypes {
         release {
