--- a/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.kr.hufstory">
 
+    //2016.03.03, Aev Oh. android:largeHeap="true" 추가.
     <application
+        android:largeHeap="true"
+
         android:allowBackup="true"
         android:icon="@mipmap/hufstoty_logo"
         android:label="@string/app_name"
