--- a/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -24,4 +24,7 @@
 
     //2016.02.11, Aev Oh, Retrofit을 사용하기 위해 추가. 인터넷 사용 권한 설정.
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    //2016.03.03, Wook, 모현의모든것 전화기능을 위해 전화걸기 권한 설정.
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 </manifest>
