모모이전 및  주소 AWS 서버 주소로 연결, 후비고 링크 hufstory.co.kr로 변경

--- a/NavigationDrawer/app/build.gradle
+++ b/NavigationDrawer/app/build.gradle
@@ -9,9 +9,9 @@ android {
         minSdkVersion 19
         targetSdkVersion 23
 
-        //2016.04.04, Jun Young Oh, versionCode & versionName upgrade, versionCode 24
-        versionCode 24
-        versionName "1.6.09"
+        //2016.04.08, Jun Young Oh, versionCode 25
+        versionCode 25
+        versionName "1.6.10"
     }
     buildTypes {
         release {
