--- a/NavigationDrawer/app/build.gradle
+++ b/NavigationDrawer/app/build.gradle
@@ -24,15 +24,16 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
+    //2016.02.25, Aev Oh, Retrofit을 사용하기 위해 추가.
+    //2016.02.27, Aev Oh, Jsoup: 웹 페이지 파싱 라이브러리.
+    //2016.03.03, Aev Oh, jericho: HTML 파싱 라이브러리.
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
-
-    //2016.02.25, Aev Oh, Retrofit을 사용하기 위해 추가.
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    //2016.02.27, Aev Oh, Jsoup: 웹 페이지 파싱 라이브러리.
     compile 'org.jsoup:jsoup:1.8.3'
-    //2016.03.03, Aev Oh, jericho: HTML 파싱 라이브러리.
     compile 'net.htmlparser.jericho:jericho-html:3.4'
+    compile 'com.android.support:support-v4:23.1.1'
 }
