--- a/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity
             android:name=".main.MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"></activity>
     </application>
 
