--- a/NavigationDrawer/app/build.gradle
+++ b/NavigationDrawer/app/build.gradle
@@ -9,9 +9,9 @@ android {
         minSdkVersion 19
         targetSdkVersion 23
 
-        //2016.04.08, Jun Young Oh, versionCode 25
-        versionCode 25
-        versionName "1.6.10"
+        //2016.06.24, Wook, versionCode 27
+        versionCode 27
+        versionName "2.0.01"
     }
     buildTypes {
         release {
