--- a/NavigationDrawer/app/build.gradle
+++ b/NavigationDrawer/app/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "co.kr.hufstory"
         minSdkVersion 19
         targetSdkVersion 23
 
-        //2017.03.18, Wook, versionCode 30
-        versionCode 31
-        versionName "2.0.05"
+        //2017.03.18, Wook, versionCode 32
+        versionCode 32
+        versionName "2.0.06"
     }
     buildTypes {
         release {
@@ -23,7 +23,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     //2016.02.25, Aev Oh, Retrofit을 사용하기 위해 추가.
     //2016.02.27, Aev Oh, Jsoup: 웹 페이지 파싱 라이브러리.
     //2016.03.03, Aev Oh, jericho: HTML 파싱 라이브러리.
@@ -35,4 +34,5 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'net.htmlparser.jericho:jericho-html:3.4'
     compile 'com.android.support:support-v4:23.1.1'
+    testCompile 'junit:junit:4.12'
 }
